Make sure we build a good HTML file for Github pages

--- a/octo-config.json
+++ b/octo-config.json
@@ -1,11 +1,11 @@
 {
-	"tickrate": 200000,
-	"fillColor": "#FFCC00",
+	"tickrate": 20000,
+	"fillColor": "#FFFFFF",
 	"fillColor2": "#FF6600",
 	"blendColor": "#662200",
-	"backgroundColor": "#996600",
-	"buzzColor": "#FFAA00",
-	"quietColor": "#000000",
+	"backgroundColor": "#000000",
+	"buzzColor": "#222222",
+	"quietColor": "#222222",
 	"shiftQuirks": false,
 	"loadStoreQuirks": false,
 	"vfOrderQuirks": false,
@@ -14,7 +14,7 @@
 	"logicQuirks": false,
 	"vBlankQuirks": false,
 	"screenRotation": 0,
-	"maxSize": 3584,
+	"maxSize": 65024,
 	"touchInputMode": "none",
 	"fontStyle": "octo",
 	"displayScale": "6"
