--- a/octo-config-lores.json
+++ b/octo-config-lores.json
@@ -15,7 +15,7 @@
 	"vBlankQuirks": false,
 	"screenRotation": 0,
 	"maxSize": 65024,
-	"touchInputMode": "none",
+	"touchInputMode": "swipe",
 	"fontStyle": "octo",
 	"displayScale": "6"
 }
