Make sure we build the HTML versions and rename "full" to "long runtime"

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "scale-hires": "magick mogrify -path ./frames/hires/ -resize 96x64^ -gravity center -extent 96x64 -monochrome -quality 100 ./frames/original/*.png",
     "encode-lores": "./encoder/smallest-size.js",
     "encode-hires": "./encoder/highest-quality.js",
-    "build": "octopus player/index.8o bin/bad-apple-high-quality.8o HIRES && octopus player/index.8o bin/bad-apple-full.8o LORES && cat bin/bad-apple-full.8o | pbcopy",
+    "build": "octopus player/index.8o bin/bad-apple-high-quality.8o HIRES && octopus player/index.8o bin/bad-apple-long-runtime.8o LORES && cat bin/bad-apple-long-runtime.8o | pbcopy",
     "build-all": "npm run build && npm run build-binaries && npm run build-html",
-    "build-binaries": "npm run build && octo bin/bad-apple-full.8o bin/bad-apple-full.ch8 && octo bin/bad-apple-high-quality.8o bin/bad-apple-high-quality.ch8",
-    "build-html": "mkdir -p dist && npm run build && octo --options octo-config-lores.json bin/bad-apple-full.8o dist/full.html && octo --options octo-config-hires.json bin/bad-apple-high-quality.8o dist/high-quality.html"
+    "build-binaries": "npm run build && octo bin/bad-apple-long-runtime.8o bin/bad-apple-long-runtime.ch8 && octo bin/bad-apple-high-quality.8o bin/bad-apple-high-quality.ch8",
+    "build-html": "mkdir -p dist && npm run build && octo --options octo-config-lores.json bin/bad-apple-long-runtime.8o dist/long-runtime.html && octo --options octo-config-hires.json bin/bad-apple-high-quality.8o dist/high-quality.html"
   },
   "dependencies": {
     "chipcode": "../../chipcode",
