--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "octopus player/index.8o bin/bad-apple-high-quality.8o HIRES && octopus player/index.8o bin/bad-apple-long-runtime.8o LORES && cat bin/bad-apple-long-runtime.8o | pbcopy",
     "build-all": "npm run build && npm run build-binaries && npm run build-html",
     "build-binaries": "npm run build && octo bin/bad-apple-long-runtime.8o bin/bad-apple-long-runtime.ch8 && octo bin/bad-apple-high-quality.8o bin/bad-apple-high-quality.ch8",
-    "build-html": "mkdir -p dist && npm run build && octo --options octo-config-lores.json bin/bad-apple-long-runtime.8o dist/long-runtime.html && octo --options octo-config-hires.json bin/bad-apple-high-quality.8o dist/high-quality.html"
+    "build-html": "mkdir -p dist && octo --options octo-config-lores.json bin/bad-apple-long-runtime.8o dist/long-runtime.html && octo --options octo-config-hires.json bin/bad-apple-high-quality.8o dist/high-quality.html"
   },
   "dependencies": {
     "chipcode": "../../chipcode",
